use history cache dates in directory listing for regular files (#4275)
fixes #4087